fixed A4 page breaks in text editor

--- a/webapps/landlord/src/components/RichTextEditor/richtexteditor.css
+++ b/webapps/landlord/src/components/RichTextEditor/richtexteditor.css
@@ -85,7 +85,6 @@
 
 .ProseMirror .template {
   background-color: #e0e0e0;
-  font-size: 0.8125rem;
   padding: 1px 6px;
   border-radius: 16px;
 }
